Added AoC badges and tweaked AoC actions

--- a/.github/workflows/readme-stars.yml
+++ b/.github/workflows/readme-stars.yml
@@ -1,12 +1,17 @@
 name: Update README ⭐
 on:
-  push
+  schedule:
+    - cron: '10 5 1-25 12 *'
+
+  workflow_dispatch:
+
+  push:
 
 jobs:
   update-readme:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: k2bd/advent-readme-stars@v1
         with:
           userId: 379535
